# hfx_portgraph

./: .gitignore  PLAN.md  pyproject.toml
corpus/: README.md  catalog.yaml  manifest.yaml
docs/: dev-ollama-manual-setup.md  phase-1.md
evals/: README.md  example_item.json  golden.jsonl  phase1_baseline.md  phase1_parse_gate.md
hfx_portgraph/: __init__.py  chunk.py  cli.py  parse.py  paths.py  rag.py
openspec/changes/archive/2026-07-21-phase-0-corpus-eval/: design.md
openspec/changes/archive/2026-07-21-phase-0-corpus-eval/specs/report-corpus/: spec.md
openspec/changes/phase-0-corpus-eval/: design.md  proposal.md  tasks.md
openspec/changes/phase-0-corpus-eval/specs/golden-eval-set/: spec.md
openspec/changes/phase-0-corpus-eval/specs/report-corpus/: spec.md
openspec/changes/phase-1-parse-rag/: design.md  proposal.md  tasks.md
openspec/changes/phase-1-parse-rag/specs/document-parse/: spec.md
openspec/changes/phase-1-parse-rag/specs/naive-rag/: spec.md
openspec/changes/phase-1-parse-rag/specs/parent-child-chunking/: spec.md
openspec/specs/golden-eval-set/: spec.md
openspec/specs/report-corpus/: spec.md
scripts/: ask.py  chunk_corpus.py  fetch_corpus.py  index_corpus.py  map_corpus_filenames.py  parse_corpus.py  validate_phase0.py
